# hyper-fingerprints

./: .gitignore  .zenodo.json  BANNER_PROMPT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  DEVELOP.md  LICENSE  LOGO_PROMPT.md  README.md  RUST_EXTENSION.md  build.sh  noxfile.py  pyproject.toml  release.sh
.github/workflows/: ci.yml
examples/: 00_quickstart.ipynb
experiments/: benchmark_fps.py  molecules.smi  profile_hdf.py
experiments/results/: benchmark.csv  profile_hdf.csv
hyper_fingerprints/: __init__.py  _core.pyi  codebook.py  encoder.py  features.py  utils.py
src/: lib.rs
tests/: benchmark_encoder.py  generate_fixtures.py  test_encoder.py  test_features.py  test_regression.py  test_rust_backend.py
tests/fixtures/: benchmark_torch.json
