[project]
name = "hyper_fingerprints"
version = "0.1.0"
description = "Hyperdimensional molecular fingerprints using Vector Symbolic Architectures"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "rdkit>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "nox",
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
